--- a/GoodreadsLog/Views/Views/Base.lproj/Main.storyboard
+++ b/GoodreadsLog/Views/Views/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="y64-VL-Iyx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MBW-uG-4Ry">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -37,13 +38,14 @@
                         </subviews>
                         <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Gvc-on-qcf"/>
                     <connections>
                         <segue destination="y64-VL-Iyx" kind="show" identifier="navigateToHome" id="MWS-gu-n2g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P4c-kv-ObX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1005" y="43"/>
+            <point key="canvasLocation" x="1402.5" y="42.25352112676056"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="p2M-UX-ok1">
@@ -100,12 +102,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="7Uh-pM-VEE" kind="showDetail" identifier="navigateToList" id="pL9-NX-86f"/>
+                        <segue destination="7Uh-pM-VEE" kind="show" identifier="navigateToList" id="uBB-1t-vVO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="piP-Ih-Hqy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2286" y="46"/>
+            <point key="canvasLocation" x="2683.125" y="45.422535211267608"/>
         </scene>
         <!--Shelf View Controller-->
         <scene sceneID="0FH-0P-Khc">
@@ -120,23 +122,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2CP-ab-6Na">
-                                <rect key="frame" x="0.0" y="28" width="320" height="520"/>
+                                <rect key="frame" x="0.0" y="72" width="320" height="476"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="shelfListItem" rowHeight="182" id="k9D-3Q-41J">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="182"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="shelfListItem" rowHeight="164" id="k9D-3Q-41J">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="164"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k9D-3Q-41J" id="779-eO-OGE">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="181.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="163.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="aXw-nq-Tfe">
                                                     <rect key="frame" x="10" y="10" width="120" height="164"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="book title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ah-Nw-5ga">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="book title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ah-Nw-5ga">
                                                     <rect key="frame" x="138" y="8" width="72" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -156,7 +157,9 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="0ah-Nw-5ga" firstAttribute="leading" secondItem="aXw-nq-Tfe" secondAttribute="trailing" constant="10" id="KCe-7m-prP"/>
                                                 <constraint firstItem="aXw-nq-Tfe" firstAttribute="top" secondItem="779-eO-OGE" secondAttribute="top" constant="10" id="PgG-N1-ehg"/>
+                                                <constraint firstItem="0ah-Nw-5ga" firstAttribute="top" secondItem="779-eO-OGE" secondAttribute="topMargin" constant="5" id="dQ2-qr-DjV"/>
                                                 <constraint firstItem="aXw-nq-Tfe" firstAttribute="leading" secondItem="779-eO-OGE" secondAttribute="leading" constant="10" id="hLn-j2-UWO"/>
                                                 <constraint firstItem="Cdh-JC-1gy" firstAttribute="leading" secondItem="aXw-nq-Tfe" secondAttribute="trailing" constant="10" id="iM4-eM-Bkn"/>
                                                 <constraint firstAttribute="bottom" secondItem="aXw-nq-Tfe" secondAttribute="bottom" constant="10" id="j6L-dn-mox"/>
@@ -178,7 +181,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ngh-6q-nwe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3322.5" y="43.309859154929576"/>
+            <point key="canvasLocation" x="3720" y="43.309859154929576"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qUr-Jx-QhM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3Af-jb-Dex" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pcG-c4-UJN">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="MBW-uG-4Ry" kind="relationship" relationship="rootViewController" id="But-Jv-8eY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ef1-5l-pcP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="274" y="45"/>
         </scene>
     </scenes>
     <resources>
